<resources>
    <string name="app_name">Buddy B</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Log In</string>
    <string name="Register">Sign Up</string>
    <string name="title_activity_splash">Splash</string>
    <string name="Next">Next</string>
    <string name="title_activity_intro1">Intro1</string>
    <string name="Skip">Skip</string>
    <string name="title_activity_intro2">Intro2</string>
    <string name="title_activity_intro3">Intro3</string>
    <string name="splash">Logo Here!</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="loginred">Already a user? Log in!</string>
    <string name="signupred">Don\'t have an account? Sign up!</string>
    <string name="LoginWith">Or log in using:</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="title_activity_verify_mail">VerifyMail</string>
    <string name="title_activity_Forgor">Forgor</string>
    <string name="title_activity_forgor">Forgor</string>
    <string name="forgor">Forgot Password? Click here.</string>
    <string name="forgorpass">Forgot Password</string>
    <string name="forgorlink">Send Reset Link</string>
    <string name="returnlogin">Return to Login</string>
    <string name="title_activity_forgor2">Forgor2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="displayname">Display Name</string>
    <string name="Proceed">Proceed</string>
    <string name="profilecreate">Profilecreate</string>
    <string name="billadd">BillAdd</string>
    <string name="savadd">SavAdd</string>
    <string name="expadd">ExpAdd</string>
    <string name="settings">Settings\n</string>
    <string name="updatedn">UpdateDn</string>
    <string name="changepass">ChangePass</string>
</resources>