<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:foreground="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="170dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="15dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/signupredirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/signupred"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgorredirect"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center|bottom"
        android:padding="10dp"
        android:text="@string/forgor"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="italic" />

</LinearLayout>